updated image paths

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <h1 class="heading"><span>upcoming</span> events </h1>
             <div class="timeline">
                 <div class="events-container left-container">
-                    <img src="/assets/images/coffee-tasting.png">
+                    <img src="./assets/images/coffee-tasting.png">
                     <div class="events-box">
                         <h2>Coffee Tasting Workshop</h2>
                         <small>3rd July 2023, Monday | 12:30 AM (AWST)</small>
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="events-container right-container">
-                    <img src="/assets/images/latte-art.png">
+                    <img src="./assets/images/latte-art.png">
                     <div class="events-box">
                         <h2>Latte Art Throwdown</h2>
                         <small>12th July 2023, Wednesday | 11:00 AM (AWST)</small>
@@ -132,7 +132,7 @@
                 </div>
 
                 <div class="events-container left-container">
-                    <img src="/assets/images/elements.png">
+                    <img src="./assets/images/elements.png">
                     <div class="events-box">
                         <h2>Live Music Night</h2>
                         <small>22nd July 2023, Saturday | 6:45 PM (AWST)</small>
@@ -142,7 +142,7 @@
                 </div>
 
                 <div class="events-container right-container">
-                    <img src="/assets/images/pairing.png">
+                    <img src="./assets/images/pairing.png">
                     <div class="events-box">
                         <h2>Coffee and Food Pairing Masterclass</h2>
                         <small>30th July 2023, Sunday | 11:30 AM (AWST)</small>
@@ -164,7 +164,7 @@
             <div class="box-container">
 
                 <div class="box">
-                    <img src="/assets/images/quote.png" class="quote">
+                    <img src="./assets/images/quote.png" class="quote">
                     <p>"Java Lava is a delightful coffee haven! Their expertly crafted beverages are a testament to their passion for the art of coffee-making. The flavors are bold and well-balanced, leaving your taste buds tingling with satisfaction. The staff's knowledge and friendly demeanor make every visit enjoyable. The only reason I don't give it a full 5 stars is the occasional wait during peak hours. Nonetheless, the quality of their coffee makes it worth the slight inconvenience."</p>
                     <img src="./assets/images/User-1.jpg" class="user">
                     <h3>Salija Khadka</h3>
@@ -179,7 +179,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="/assets/images/quote.png" class="quote">
+                    <img src="./assets/images/quote.png" class="quote">
                     <p>"Java Lava is a coffee lover's paradise! The aromatic brews served here are nothing short of perfection. The skilled baristas ensure each cup is a work of art, delivering a heavenly taste with every sip. The cozy ambiance and friendly staff create a welcoming environment that keeps me coming back for more. If you're seeking the ultimate coffee experience, Java Lava is the place to be!"</p><br>
                     <img src="./assets/images/User-2.png" class="user">
                     <h3>Sujala Ghimire</h3>
@@ -194,7 +194,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="/assets/images/quote.png" class="quote">
+                    <img src="./assets/images/quote.png" class="quote">
                     <p>"Java Lava is a hidden gem of caffeine bliss! Their coffee creations are a testament to the dedication and skill of the baristas. Each cup is a flavorful masterpiece, leaving you craving more. The cozy ambiance and inviting atmosphere provide the perfect backdrop for savoring your favorite brew. The only minor setback is the limited seating, but the outstanding coffee makes it worth the occasional wait. Java Lava is a must-visit for coffee aficionados!"</p>
                     <img src="./assets/images/User-3.png" class="user">
                     <h3>Abhi Khanal</h3>
